force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/ECT_Certificate_Review_Checklist__c.object-meta.xml
<CustomObject>
    <label>Certificate Review Checklist</label>
    <nameField>
        <displayFormat>Checklist -{000000}</displayFormat>
        <label>Certificate Review Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Review Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>