force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/fields/Carry_the_State_Seal__c.field-meta.xml
<CustomField>
    <fullName>Carry_the_State_Seal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carry the State Seal</label>
    <type>Checkbox</type>
</CustomField>