force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/fields/Issues_with_the_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_the_Certificates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issues with the Certificates</label>
    <type>Checkbox</type>
</CustomField>