force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/fields/Names_of_all_nominated_Electors__c.field-meta.xml
<CustomField>
    <fullName>Names_of_all_nominated_Electors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Names of all nominated Electors</label>
    <type>Checkbox</type>
</CustomField>