force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/fields/Signed_by_the_Governor_or_Mayor__c.field-meta.xml
<CustomField>
    <fullName>Signed_by_the_Governor_or_Mayor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed by the Governor or Mayor</label>
    <type>Checkbox</type>
</CustomField>