force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/fields/Vote_totals_for_all_Electors__c.field-meta.xml
<CustomField>
    <fullName>Vote_totals_for_all_Electors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vote totals for all Electors</label>
    <type>Checkbox</type>
</CustomField>