force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/fields/X3_Originals__c.field-meta.xml
<CustomField>
    <fullName>X3_Originals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3 originals</label>
    <type>Checkbox</type>
</CustomField>