force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/recordTypes/Certificate_of_Ascertainment.recordType-meta.xml
<RecordType>
    <fullName>Certificate_of_Ascertainment</fullName>
    <active>true</active>
    <label>Certificate of Ascertainment</label>
</RecordType>