force-app/main/default/objects/ECT_Certificate_Review_Checklist__c/recordTypes/Certificate_of_Vote.recordType-meta.xml
<RecordType>
    <fullName>Certificate_of_Vote</fullName>
    <active>true</active>
    <label>Certificate of Vote</label>
</RecordType>